Chat Grundfunktion implementiert. Es ist möglich nen Chat zu starten bzw. in nen Chatroom einzutreten. Es müssen noch die Strukturen in der Datenbank bearbeitet werden. (Grupppenräume mit der UserID), und ne Toolbar mit nem 3 Dot Menü muss noch hinzugefügt werden. Damit User die Gruppe verlassen können

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,7 @@
     <string name="facebook_application_id">445553339214503</string>
     <string name="fb_login_protocol_scheme">fb445553339214503</string>
     <string name="title_activity_profile">ProfileActivity</string>
+    <string name="title_activity_chat">ActivityChat</string>
 
 
 </resources>
